refactor: 💄 Change links style on focus-visible

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -49,7 +49,8 @@ main a {
 
   &:hover,
   &:active,
-  &:focus {
+  &:focus
+  &:not(:focus-visible) {
     background: red;
     color: white;
   }
