--- a/styles/components/Navbar.module.scss
+++ b/styles/components/Navbar.module.scss
@@ -3,13 +3,18 @@
   top: 0;
   background-color: white;
   z-index: 2;
-  padding: .4em;
+  padding: .4em 1em;
   box-shadow: 0 0 4px rgba(black, .3);
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  justify-items: center;
 }
 
 .nav ul {
   display: flex;
   gap: 1em;
+  grid-column: 2;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
