--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -65,10 +65,14 @@ figure {
   max-width: 100%;
 }
 
-button:disabled {
-  cursor: not-allowed;
-  filter: saturate(0);
-  opacity: .5;
+button {
+  cursor: pointer;
+
+  &:disabled {
+    cursor: not-allowed;
+    filter: saturate(0);
+    opacity: .5;
+  }
 }
 
 iframe {
