refactor: ♻️ Classnames (Article)

--- a/styles/components/Article.module.scss
+++ b/styles/components/Article.module.scss
@@ -1,8 +1,8 @@
-.article h2 {
+.title {
   margin-bottom: .4em;
 }
 
-.article small {
+.date {
   display: block;
   opacity: .6;
   margin-bottom: 1em;
