--- a/styles/Articles.module.scss
+++ b/styles/Articles.module.scss
@@ -1,16 +1,17 @@
 .mainTitle {
   padding-bottom: .5em;
+  margin-bottom: 1em;
   border-bottom: .2em solid rgb(245, 245, 245);
 }
 
-.articles div {
+.article {
   padding-bottom: 1.2em;
-}
+  
+  &:not(:first-of-type) {
+    padding-top: 1em;
+  }
 
-.articles div:not(:first-child) {
-  padding-top: 1em;
-}
-
-.articles div:not(:last-child) {
-  border-bottom: 1px solid rgba(black, .1);
+  &:not(:last-child) {
+    border-bottom: 1px solid rgba(black, .1);
+  }
 }
