--- a/styles/components/ScrollTop.module.scss
+++ b/styles/components/ScrollTop.module.scss
@@ -1,14 +1,17 @@
 .scroll {
-  cursor: pointer;
-  background: transparent;
+  background: white;
   outline: none;
   border: none;
+  position: fixed;
   border-radius: 50%;
   font-size: 1.2em;
+  right: 2em;
+  bottom: 5em;
   padding: .5em .6em;
+  box-shadow: 2px 2px 5px rgba(black, .15);
   transition: 150ms;
 
   &:hover {
-    box-shadow: 2px 2px 5px rgba(black, .2);
+    box-shadow: 2px 2px 10px rgba(black, .2);
   }
 }
