--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -18,7 +18,7 @@
   color: white;
   font-size: 4em;
   font-family: 'Carter One', $fonts;
-  text-shadow: -2px 2px 8px rgba(black, .8);
+  text-shadow: -2px 2px 8px rgba(black, 0.8);
 }
 
 @media (max-width: 720px) {
