--- a/styles/components/Image.module.scss
+++ b/styles/components/Image.module.scss
@@ -12,16 +12,16 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(black, .8);
-  opacity: .8;
+  background-color: rgba(black, 0.8);
+  opacity: 0.8;
   color: white;
-  padding: .4em;
-  transform: translateY(-.2em);
+  padding: 0.4em;
+  transform: translateY(-0.2em);
   z-index: 1;
 }
 
 @media (max-width: 480px) {
   .figure figcaption {
-    padding: .2em;
+    padding: 0.2em;
   }
 }
