--- a/styles/components/Article.module.scss
+++ b/styles/components/Article.module.scss
@@ -1,10 +1,10 @@
 .title {
-  margin-bottom: .4em;
+  margin-bottom: 0.4em;
 }
 
 .date {
   display: block;
-  opacity: .6;
+  opacity: 0.6;
   margin-bottom: 1em;
-  font-size: .9em;
+  font-size: 0.9em;
 }
