--- a/styles/components/Event.module.scss
+++ b/styles/components/Event.module.scss
@@ -1,9 +1,11 @@
 .container {
-  display: grid;
-  grid-template-columns: auto 1fr auto;
+  display: flex;
+  gap: 1em;
   align-items: center;
-  gap: .4em;
-  margin: .5em 0;
+  position: relative;
+  width: 100%;
+  gap: 0.4em;
+  margin: 0.5em 0;
 
   span {
     text-overflow: ellipsis;
@@ -20,25 +22,13 @@
 }
 
 .info {
-  border-left: .2em solid red;
-  padding-left: .5em;
-  color: rgba(black, .7);
+  border-left: 0.2em solid red;
+  padding-left: 0.5em;
+  color: rgba(black, 0.7);
   grid-column: span 2;
 }
 
 .more {
   width: 2em;
   height: 2em;
-  // display: inline-block;
-  // border-radius: 50%;
-  // background-color: red;
-  // border: none;
-  // color: white;
-  // font-weight: 600;
-  // outline: none;
-  // transition: 150ms;
-
-  // &:hover {
-  //   box-shadow: 0 0 0 4px rgba(red, .2);
-  // }
 }
