--- a/styles/components/Schedules.module.scss
+++ b/styles/components/Schedules.module.scss
@@ -13,11 +13,11 @@
   width: 100%;
 
   tbody:nth-child(odd) {
-    background: rgba(black, .05);
+    background: rgba(black, 0.05);
   }
 
   td {
-    padding: .5em;
+    padding: 0.5em;
   }
 }
 
