--- a/styles/components/ScrollTop.module.scss
+++ b/styles/components/ScrollTop.module.scss
@@ -7,11 +7,11 @@
   font-size: 1.2em;
   right: 2em;
   bottom: 5em;
-  padding: .5em .6em;
-  box-shadow: 2px 2px 5px rgba(black, .15);
+  padding: 0.5em 0.6em;
+  box-shadow: 2px 2px 5px rgba(black, 0.15);
   transition: 150ms;
 
   &:hover {
-    box-shadow: 2px 2px 10px rgba(black, .2);
+    box-shadow: 2px 2px 10px rgba(black, 0.2);
   }
 }
