--- a/styles/components/inputs/Button.module.scss
+++ b/styles/components/inputs/Button.module.scss
@@ -1,7 +1,7 @@
 .btn {
   background: red;
   color: white;
-  padding: .6em 1.2em;
+  padding: 0.6em 1.2em;
   font-weight: 600;
   outline: none;
   border: none;
@@ -13,6 +13,6 @@
   }
 
   &:focus-visible {
-    box-shadow: 0 0 0 .3em rgba(red, .2);
+    box-shadow: 0 0 0 0.3em rgba(red, 0.2);
   }
 }
