--- a/styles/components/inputs/Input.module.scss
+++ b/styles/components/inputs/Input.module.scss
@@ -3,24 +3,24 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: .4em;
+  gap: 0.4em;
 }
 
 .container small {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 .input {
-  padding: .8em 1em;
-  border-radius: .4em;
-  border: 1px solid rgba(black, .1);
+  padding: 0.8em 1em;
+  border-radius: 0.4em;
+  border: 1px solid rgba(black, 0.1);
   transition: 100ms;
   outline: none;
   font-family: $fonts;
-  font-size: .9em;
-  
+  font-size: 0.9em;
+
   &::placeholder {
-    opacity: .8;
+    opacity: 0.8;
   }
 
   &:hover,
@@ -33,5 +33,5 @@
 .required::after {
   content: '*';
   color: red;
-  margin-left: .2em;
+  margin-left: 0.2em;
 }
