--- a/styles/components/inputs/TextArea.module.scss
+++ b/styles/components/inputs/TextArea.module.scss
@@ -4,25 +4,25 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: .4em;
+  gap: 0.4em;
 }
 
 .container small {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 .container textarea {
-  padding: .8em 1em;
-  border-radius: .4em;
-  border: 1px solid rgba(black, .1);
+  padding: 0.8em 1em;
+  border-radius: 0.4em;
+  border: 1px solid rgba(black, 0.1);
   transition: 100ms;
   outline: none;
   font-family: $fonts;
-  font-size: .9em;
+  font-size: 0.9em;
   min-height: 10em;
 
   &::placeholder {
-    opacity: .8;
+    opacity: 0.8;
   }
 
   &:hover,
@@ -35,15 +35,15 @@
 .required::after {
   content: '*';
   color: red;
-  margin-left: .2em;
+  margin-left: 0.2em;
 }
 
 .progress {
   position: relative;
   width: 100%;
   border-radius: 10em;
-  box-shadow: 0 0 0 1px rgba(black, .1);
-  height: .8em;
+  box-shadow: 0 0 0 1px rgba(black, 0.1);
+  height: 0.8em;
   overflow: hidden;
 }
 
