--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -23,7 +23,7 @@ body {
 }
 
 .icon {
-  vertical-align: -.13em;
+  vertical-align: -0.13em;
   display: inline-block;
 }
 
@@ -40,23 +40,23 @@ strong {
 }
 
 main a {
-  background: rgba(red, .05);
-  padding: .2em .4em;
-  border-radius: .4em;
+  background: rgba(red, 0.05);
+  padding: 0.2em 0.4em;
+  border-radius: 0.4em;
   transition: all 150ms;
   outline: none;
   text-align: center;
 
   &:hover,
   &:active,
-  &:focus
+  &:focus,
   &:not(:focus-visible) {
     background: red;
     color: white;
   }
-  
+
   &:focus-visible {
-    box-shadow: 0 0 0 .2em red;
+    box-shadow: 0 0 0 0.2em red;
   }
 }
 
@@ -71,7 +71,7 @@ button {
   &:disabled {
     cursor: not-allowed;
     filter: saturate(0);
-    opacity: .5;
+    opacity: 0.5;
   }
 }
 
@@ -90,8 +90,8 @@ a {
 }
 
 ::-webkit-scrollbar {
-  width: .6em;
-  height: .6em;
+  width: 0.6em;
+  height: 0.6em;
 }
 
 ::-webkit-scrollbar-thumb {
