--- a/styles/components/Article.module.scss
+++ b/styles/components/Article.module.scss
@@ -1,5 +1,6 @@
 .title {
   margin-bottom: 0.4em;
+  margin-top: 0.5em;
 }
 
 .date {
@@ -7,4 +8,10 @@
   opacity: 0.6;
   margin-bottom: 1em;
   font-size: 0.9em;
+}
+
+.article {
+  padding: 1.5rem;
+  box-shadow: 2px 2px 10px rgba(black, 0.1);
+  border-radius: 1rem;
 }
