--- a/styles/Rejoindre.module.scss
+++ b/styles/Rejoindre.module.scss
@@ -1,8 +1,5 @@
 .container {
-  max-width: 40em;
-  margin: auto;
-}
-
-.title:not(:first-of-type) {
-  margin-block-start: 1.6em;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
