--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -14,6 +14,7 @@
 
 .networks {
   display: flex;
+  justify-content: space-evenly;
   gap: 2em;
 }
 
@@ -21,4 +22,13 @@
   display: flex;
   flex-direction: column;
   gap: 0.5em;
+}
+
+@media (max-width: 1080px) {
+  .container {
+    margin: auto;
+    grid-auto-flow: row;
+    grid-template-columns: 1fr;
+    max-width: 40rem;
+  }
 }
