--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   align-items: start;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: 1fr max-content;
   gap: 5rem;
 }
 
