--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -1,3 +1,5 @@
+@import '../vars';
+
 .footer {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
@@ -36,7 +38,7 @@
   transition: 150ms;
 
   &:hover {
-    color: red;
+    color: $color-main;
   }
 }
 
