feat: production deployment (#16)
* style: minor changes

* fix: main color contrasts (lightouse)

* Fix: color contrasts for links (#9)

* fix: links contrast

* fix: padding around navlink instead of li

* fix: 404 button focus border

* fix: html lang attribute (#10)

* Add README.md (#12)

* docs: add README.md

* docs: add website dev url

* docs: add README.md (#13)

* docs: add README.md

* docs: add website dev url

* docs(README): add prerequisites section

* fix(homepage): right panel width (#15)

* feat(home): add swiper

--- a/styles/404.module.scss
+++ b/styles/404.module.scss
@@ -1,3 +1,5 @@
+@import 'vars';
+
 .container {
   display: flex;
   flex-direction: column;
@@ -11,9 +13,9 @@
 }
 
 .link {
-  background: red;
+  background: $color-main;
   color: white;
-  padding: 0.4em 0.8em;
+  padding: 0.5em 1em;
   border-radius: 10em;
   font-weight: 600;
   transition: 150ms;
@@ -21,10 +23,10 @@
 
   &:hover,
   &:active {
-    background: rgb(210, 0, 0);
+    background: $color-main-darker;
   }
 
   &:focus-visible {
-    box-shadow: 0 0 0 0.3em rgba(red, 0.2);
+    box-shadow: 0 0 0 0.2em black;
   }
 }
