--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -1,15 +1,26 @@
+$grid-gap: 1.5rem;
+
 .container {
-  display: grid;
-  align-items: start;
-  grid-template-columns: 1fr max-content;
-  gap: 5rem;
+  display: flex;
+  flex-direction: column;
+  gap: $grid-gap;
+  margin: auto;
+  max-width: 40rem;
 }
 
 .articles,
 .right {
   display: grid;
   grid-auto-flow: row;
-  gap: 1.5rem;
+  align-items: start;
+}
+
+.articles {
+  gap: 2rem;
+}
+
+.right {
+  gap: $grid-gap;
 }
 
 .networks {
@@ -24,12 +35,25 @@
   gap: 0.5em;
 }
 
-@media (max-width: 1080px) {
+.gallery {
+  grid-column: span 2;
+
+  .pagination {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media (min-width: 1080px) {
   .container {
-    margin: auto;
-    grid-auto-flow: row;
-    grid-template-columns: 1fr;
-    max-width: 40rem;
-    gap: 1.5rem;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    max-width: unset;
+    column-gap: 4rem;
+    align-items: start;
+
+    .right {
+      max-width: 25rem;
+    }
   }
 }
