--- a/styles/components/Event.module.scss
+++ b/styles/components/Event.module.scss
@@ -30,12 +30,11 @@
   .date {
     opacity: 0.5;
   }
-}
 
-.info {
-  border-left: 2px solid $color-main;
-  margin-left: 1.5em;
-  padding: 0.4em 0.8em;
-  color: rgba(black, 0.7);
-  grid-column: span 2;
+  .info {
+    padding: 0.5em;
+    color: rgba(black, 0.7);
+    grid-column: span 3;
+    font-size: 0.9em;
+  }
 }
