--- a/styles/components/Event.module.scss
+++ b/styles/components/Event.module.scss
@@ -7,7 +7,8 @@
   align-items: center;
   position: relative;
   width: 100%;
-  gap: 0.4em;
+  column-gap: 0.4em;
+  row-gap: 0;
   margin: 0.5em 0;
   background: rgba(rgb(200, 200, 200), 0.1);
   padding: 0.6em;
