--- a/styles/components/inputs/Input.module.scss
+++ b/styles/components/inputs/Input.module.scss
@@ -4,34 +4,34 @@
   display: flex;
   flex-direction: column;
   gap: 0.4em;
-}
 
-.container small {
-  opacity: 0.7;
-}
-
-.input {
-  padding: 0.8em 1em;
-  border-radius: 0.4em;
-  border: 1px solid rgba(black, 0.1);
-  transition: 100ms;
-  outline: none;
-  font-family: $fonts;
-  font-size: 0.9em;
-
-  &::placeholder {
-    opacity: 0.8;
+  .hint {
+    opacity: 0.7;
   }
 
-  &:hover,
-  &:active,
-  &:focus {
-    border-color: black;
-  }
-}
+  .input {
+    padding: 0.8em 1em;
+    border-radius: 0.4em;
+    border: 1px solid rgba(black, 0.1);
+    transition: 100ms;
+    outline: none;
+    font-family: $fonts;
+    font-size: 0.9em;
 
-.required::after {
-  content: '*';
-  color: red;
-  margin-left: 0.2em;
+    &::placeholder {
+      opacity: 0.8;
+    }
+
+    &:hover,
+    &:active,
+    &:focus {
+      border-color: black;
+    }
+  }
+
+  .required::after {
+    content: '*';
+    color: red;
+    margin-left: 0.2em;
+  }
 }
